[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "cspell-dict"
version = "1.0.0"
authors = ["Kyle Finley <kyle@finley.sh>"]
description = ""
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.poetry"]
first = ["name", "version"]
