[project]
name = "cspell-dict"
dynamic = ["version"]
requires-python = ">=3.12, <4"

[tool.poetry]
version = "1.2.1"
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["project", "tool", "tool.poetry"]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides.project.first = ["name", "version"]
overrides."tool.poetry".first = ["version"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
